[tool.poetry]
name = "dioptra-zeph"
version = "1.1.0"
description = "An orchestrator for distributed IP tracing"
authors = ["Matthieu Gouel <matthieu.gouel@protonmail.com>"]
homepage = "https://github.com/dioptra-io/zeph"
readme = "README.md"
license = "MIT"
packages = [
    { include = "zeph" },
    { include = "zeph_utils" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.25.0"
py-radix = "^0.10.0"
mrtparse = "^2.0.1"
typer = ">=0.3.2,<0.5.0"
diamond-miner = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
black = {version = "^22.1", allow-prereleases = true}
flake8 = "^4.0.1"
bump2version = "^1.0.1"

[tool.poetry.scripts]
zeph = "zeph.__main__:run"
zeph-bgp-download = "zeph_utils.zeph_bgp_download:run"
zeph-bgp-convert = "zeph_utils.zeph_bgp_convert:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
